tests/stderr-snapshots/integration__integration__mapfiles__seqmap_missing_magic.snap
---
source: tests/integration/mapfiles.rs
expression: stderr
---
error: missing magic for mapfile
  ┌─ <mapfile-1>:1:1
  │
1 │ 
  │ ^ line does not begin with '!'


